--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.17.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "sass": "^1.39.2"
+    "sass": "^1.39.2",
+    "stripe": "^8.174.0"
   },
   "devDependencies": {
     "@types/node": "^16.9.1",
