--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.17.1",
+    "faunadb": "^4.4.1",
     "next": "11.1.2",
+    "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
@@ -18,6 +20,7 @@
     "stripe": "^8.174.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^16.9.1",
     "@types/react": "17.0.20",
     "eslint": "7.32.0",
