:shipit: configura stripe cli e adiciona subscriptions ao fauna

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.17.1",
+    "axios": "^0.21.4",
     "faunadb": "^4.4.1",
     "next": "11.1.2",
     "next-auth": "^3.29.0",
@@ -24,7 +25,7 @@
     "@types/node": "^16.9.1",
     "@types/react": "17.0.20",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
+    "eslint-config-next": "11.1.3-canary.7",
     "typescript": "4.4.3"
   }
 }
