--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "^5.1.0",
     "@stripe/stripe-js": "^1.17.1",
     "axios": "^0.21.4",
     "faunadb": "^4.4.1",
     "next": "11.1.2",
     "next-auth": "^3.29.0",
+    "prismic-dom": "^2.2.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
@@ -23,6 +25,7 @@
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
     "@types/node": "^16.9.1",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "17.0.20",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.3-canary.7",
