--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@prismicio/client": "^5.1.0",
@@ -23,12 +24,18 @@
     "stripe": "^8.174.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^16.9.1",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "17.0.20",
+    "babel-jest": "^27.5.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.3-canary.7",
+    "jest": "^27.5.1",
+    "jest-dom": "^4.0.0",
     "typescript": "4.4.3"
   }
 }
