--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-jest": "^27.5.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.3-canary.7",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "jest-dom": "^4.0.0",
     "typescript": "4.4.3"
