--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "sass": "^1.39.2",
-    "stripe": "^8.174.0"
+    "stripe": "^8.174.0",
+    "ts-jest": "^27.1.4"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.11.3",
